--- a/Code/src/css/admin.css
+++ b/Code/src/css/admin.css
@@ -20,7 +20,8 @@
 
 .inside_square {
     text-align: center;
-    padding: 10px 0px 10px;
+    padding: 20px 0px 20px;
     font-family:'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     border-bottom: 1px solid rgb(218, 218, 218);
+    font-size: larger;
 }
