--- a/Code/src/css/Bandeau_haut.css
+++ b/Code/src/css/Bandeau_haut.css
@@ -87,10 +87,11 @@ body{
 
 .user_logo img {
     display: block;
-    width: 50px;
-    object-fit: contain;
+    background-size: cover;
+    border-radius:50% 50% 50% 50%;
+    width:50px;
+    height:50px;
     padding: 0px 30px 0px 30px;
-    border-radius: 50%;
 }
 
 .lab_logo img {
