Ajout des boutons modifier et supprimer pour les pages administrateur d'expériences

--- a/Code/src/css/Main_page.css
+++ b/Code/src/css/Main_page.css
@@ -76,6 +76,7 @@ body {
 .btn-register {
     background: #ffb300;
     color: white;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
 }
 
 .btn:hover {
