--- a/Code/src/css/page_mes_experiences.css
+++ b/Code/src/css/page_mes_experiences.css
@@ -10,6 +10,7 @@
     margin-bottom: 50px;
 }
 
+/* Définition du texte qui s'affiche en haut du bloc */
 .section-experiences h2 {
     color: #2b5f7e;
     font-size: 1.2rem;
@@ -19,7 +20,7 @@
     border-bottom: 2px solid #e0e0e0;
 }
 
-/* Liste verticale des expériences */
+Liste verticale des expériences
 .liste {
     display: flex;
     flex-direction: column;
