--- a/Code/src/css/page_profil_style.css
+++ b/Code/src/css/page_profil_style.css
@@ -1,24 +1,14 @@
-/* ======================= RESET ET GENERAL ======================= */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f3f3f3;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
 /* ======================= CONTENEUR PRINCIPAL ======================= */
 .profil-box {
     display: flex;
     gap: 30px;
+    
+    /* margin-left: auto;
+    margin-right: auto; */
+    margin : 85px auto 85px auto;
+    
+    justify-content: center;
+    align-items: center;
     background-color: rgba(255, 255, 255, 0.95);
     padding: 40px;
     border-radius: 15px;
