--- a/Code/src/css/page_admin_utilisateurs.css
+++ b/Code/src/css/page_admin_utilisateurs.css
@@ -1,46 +1,26 @@
-td {
-    border: 2px solid black;
-    padding: 10px 15px;
-}
-
 .whole_table {
     border-collapse: collapse;
     width: 100%;
 }
 
-input {
+.whole_table td {
+    border: 2px solid black;
+    padding: 10px 15px;
+}
+
+.whole_table input {
     width: 80%;
 }
 
+.whole_table button {
+display: block;
+margin: auto;
+}
+.whole_table a {
+display: block;
+margin: auto;
+}
+
 .tablehead{
-    background-color : #99BB22;
-}
-
-.bandeau {
-    background-image: linear-gradient(to bottom, #F1DE4C, #FFFFFF);
-    font-size: xxx-large;
-    font-weight: bold;
-    font-family:'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color:black;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    padding: 1px 0px 0px 50px;
-}
-
-.back_square{
-    background-color: #F7F7F7;
-    align-items: center;
-    border-radius: 4px; 
-    box-shadow: 0 10px 10px rgba(0,0,0,0.1);
-    padding: 30px 0px 30px 0px;
-    margin: 70px;
-    display: table;
-
-}
-
-.inside_square {
-    text-align: center;
-    padding: 20px 0px 20px;
-    font-family:'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    border-bottom: 1px solid rgb(218, 218, 218);
-    font-size: larger;
+    background-color : #2d9bce;
 }
