--- a/Code/src/css/page_experience.css
+++ b/Code/src/css/page_experience.css
@@ -48,11 +48,13 @@
     box-sizing: border-box;
 }
 
+/* Titre principal */
 h1 {
     text-align: center;
-    color: #1a1a1a;
-    font-size: 2rem;
-    margin: 30px 0;
+    font-size: 2.3rem;
+    margin-bottom: 30px;
+    font-family: "Georgia", serif;
+    color: #1c1c1c;
 }
 
 /* Titres */
