Modification page_modif_resultat

--- a/Code/src/css/Bandeau_haut.css
+++ b/Code/src/css/Bandeau_haut.css
@@ -38,7 +38,7 @@ body{
     position: absolute;
     right: 18px;
     font-size: 18px;
-    color: #666;
+    color: #eee7f3;
     cursor: pointer;
     top: 50%;
     transform: translateY(-50%);
