--- a/Code/src/css/page_mes_experiences.css
+++ b/Code/src/css/page_mes_experiences.css
@@ -30,7 +30,7 @@ Liste verticale des expériences
 /* Carte d'expérience - style vertical */
 .experience-card {
     display: block;
-    width: 100%;
+    margin: 10px 0px 10px;
     padding: 20px 25px;
     border: 1px solid #e0e0e0;
     border-radius: 8px;
