--- a/Code/src/css/page_modification_resultats.css
+++ b/Code/src/css/page_modification_resultats.css
@@ -69,7 +69,7 @@ input[type="file"] { display:block; margin-top:8px; }
     gap: 10px;
     overflow-x: auto;
     padding: 8px 0;
-    max-height: 180px;
+    height: 230px;
 }
 
 .file-card { 
@@ -80,6 +80,7 @@ input[type="file"] { display:block; margin-top:8px; }
     border-radius:8px; 
     text-align:center; 
     font-size:13px; 
+    height:176px;
 }
 
 .file-card img { max-width:100%; height:90px; object-fit:cover; border-radius:6px; display:block; margin:0 auto 6px; }
@@ -207,4 +208,9 @@ input[type="file"] { display:block; margin-top:8px; }
 
 .help-button:hover {
     background: #e8e8e8;
+}
+
+.preview-button-wrapper {
+    text-align: center;     /* centre le bouton horizontalement */
+    margin-top: 20px;       /* espace au-dessus pour le descendre un peu */
 }
